--- a/data/wifimanager.html
+++ b/data/wifimanager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt=BR">
 <head>
-<title>Alimentador de Pets</title>
+<title>Alimentador de Pets Access Point</title>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="data:,">
@@ -9,23 +9,23 @@
 </head>
 <body>
 <header class="topnav">
-<h1>ESP Wi-Fi Manager</h1>
+<h1>Alimentador de Pets Access Point</h1>
 </header>
 <div class="content">
 <div class="card-grid">
 <div class="card">
 <form action="/" method="POST">
-<p>
-<label for="ssid">SSID</label>
-<input type="text" id ="ssid" name="ssid"><br>
-<label for="pass">Password</label>
-<input type="text" id ="pass" name="pass"><br>
-<label for="ip">IP Address</label>
+<div class="dados">
+<label for="ssid">Rede</label>
+<input type="text" id ="ssid" name="ssid"required><br>
+<label for="pass">Senha</label>
+<input type="password" id ="pass" name="pass" minlength="8" required><br>
+<!-- <label for="ip">IP</label>
 <input type="text" id ="ip" name="ip" value="192.168.1.99"><br>
-<label for="gateway">Gateway Address</label>
-<input type="text" id ="gateway" name="gateway" value="192.168.1.1"><br>
-<input type ="submit" value ="Submit">
-</p>
+<label for="gateway">Gateway</label>
+<input type="text" id ="gateway" name="gateway" value="192.168.1.1"><br> -->
+</div>
+<input type ="submit" value ="Enviar">
 </form>
 </div>
 </div>
